--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: demo_001
+featured-image: https://scontent-ort2-2.xx.fbcdn.net/v/t39.30808-6/253090754_10161596791769768_3147920575981718023_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=xzK4n86ppjUAX_53mHf&_nc_ht=scontent-ort2-2.xx&oh=00_AT9Mif_YiwiIKwyBfwob6_P7QclzY0_X8niTDhO4ocTjHA&oe=63450CF8
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 10em # Default is 8em
 # optional: change position of background image, center, top, bottom
