Edited capitalization in tagline

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/rachknig/knight-family-recipes
 # title of site appears in banner
 title: Knight Family Recipes
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Recipes from the family recipe box
+tagline: Recipes from the Family Recipe Box
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "Knight Family Recipes is a collection of recipes from the family recipe box."
