--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ metadata: knight-family-recipes-metadata
 # ROBOTS EXCLUDE
 #
 # set noindex to true if you do NOT want Google to index your site
-noindex: true 
+# noindex: true 
 
 ##########
 # BUILD SETTINGS 
