--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: https://github.com/rachknig/knight-family-recipes/blob/main/docs/siteheader.JPG?raw=true
+featured-image: /knight-family-recipes/docs/siteheader.JPG
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 8em # Default is 8em
 # optional: change position of background image, center, top, bottom
