--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Knight Family Recipes
 tagline: Recipes from the Family Recipe Box
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Knight Family Recipes is a collection of recipes from the family recipe box."
+description: "Knight Family Recipes is a collection of handwritten recipe cards from the recipe boxes of the Knight family."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: rachknig
 
